# stitch

./: CMakeLists.txt  README  package.xml
src/: capture.cpp  stitch.cpp  stitch_no_gpu.cpp
